keycloak/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: jboss/keycloak
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /opt/jboss/keycloak/standalone/data
              name: keycloak-volume
      volumes:
        - name: keycloak-volume
          hostPath:
            path: /tmp/rancher-desktop/keycloak
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-svc
spec:
  selector:
    app: keycloak
  ports:
    - port: 8080
      protocol: TCP
