keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
spec:
  tls:
    - hosts:
        - keycloak.example.com
      secretName: tls-secret
  rules:
    - host: keycloak.example.com
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: keycloak-svc
                port:
                  number: 8080
